Fix button spacing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -161,9 +161,6 @@ a.button span {
 #view-on-github span {
   background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
 }
-#view-on-github {
-  margin-right: 0;
-}
 #about-me-profile span {
   background: transparent url(../images/about-me-icon.png) 12px 50% no-repeat;
   background-size: 25px;
